<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView_name_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_name_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_name_left"
        app:layout_constraintStart_toEndOf="@id/textView_name_left"
        app:layout_constraintTop_toTopOf="@id/textView_name_left"
        tools:text="Luke Skywalker" />

    <View
        android:id="@+id/divider_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_name_left" />

    <TextView
        android:id="@+id/textView_height_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_height"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_name" />

    <TextView
        android:id="@+id/textView_height_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_height_left"
        app:layout_constraintStart_toEndOf="@id/textView_height_left"
        app:layout_constraintTop_toTopOf="@id/textView_height_left"
        tools:text="172" />

    <View
        android:id="@+id/divider_height"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_height_left" />

    <TextView
        android:id="@+id/textView_mass_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_mass"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_height" />

    <TextView
        android:id="@+id/textView_mass_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_mass_left"
        app:layout_constraintStart_toEndOf="@id/textView_mass_left"
        app:layout_constraintTop_toTopOf="@id/textView_mass_left"
        tools:text="77" />

    <View
        android:id="@+id/divider_mass"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_mass_left" />

    <TextView
        android:id="@+id/textView_hair_color_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_hair_color"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_mass" />

    <TextView
        android:id="@+id/textView_hair_color_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_hair_color_left"
        app:layout_constraintStart_toEndOf="@id/textView_hair_color_left"
        app:layout_constraintTop_toTopOf="@id/textView_hair_color_left"
        tools:text="Blond" />

    <View
        android:id="@+id/divider_hair_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_hair_color_left" />

    <TextView
        android:id="@+id/textView_skin_color_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_skin_color"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_hair_color" />

    <TextView
        android:id="@+id/textView_skin_color_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_skin_color_left"
        app:layout_constraintStart_toEndOf="@id/textView_skin_color_left"
        app:layout_constraintTop_toTopOf="@id/textView_skin_color_left"
        tools:text="Fair" />

    <View
        android:id="@+id/divider_skin_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_skin_color_left" />

    <TextView
        android:id="@+id/textView_eye_color_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_eye_color"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_skin_color" />

    <TextView
        android:id="@+id/textView_eye_color_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_eye_color_left"
        app:layout_constraintStart_toEndOf="@id/textView_eye_color_left"
        app:layout_constraintTop_toTopOf="@id/textView_eye_color_left"
        tools:text="Blue" />

    <View
        android:id="@+id/divider_eye_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_eye_color_left" />

    <TextView
        android:id="@+id/textView_birth_year_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_birth_year"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_eye_color" />

    <TextView
        android:id="@+id/textView_birth_year_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_birth_year_left"
        app:layout_constraintStart_toEndOf="@id/textView_birth_year_left"
        app:layout_constraintTop_toTopOf="@id/textView_birth_year_left"
        tools:text="19BBY" />

    <View
        android:id="@+id/divider_birth_year"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_birth_year_left" />

    <TextView
        android:id="@+id/textView_gender_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_gender"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_birth_year" />

    <TextView
        android:id="@+id/textView_gender_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_gender_left"
        app:layout_constraintStart_toEndOf="@id/textView_gender_left"
        app:layout_constraintTop_toTopOf="@id/textView_gender_left"
        tools:text="Male" />

    <View
        android:id="@+id/divider_gender"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_gender_left" />

    <TextView
        android:id="@+id/textView_homeworld_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_homeworld"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_gender" />

    <TextView
        android:id="@+id/textView_homeworld_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_homeworld_left"
        app:layout_constraintStart_toEndOf="@id/textView_homeworld_left"
        app:layout_constraintTop_toTopOf="@id/textView_homeworld_left"
        tools:text="Tatooine" />

    <View
        android:id="@+id/divider_homeworld"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_homeworld_left" />

</android.support.constraint.ConstraintLayout>